tests/health/gold/sdk/tests__lsp__this-super-definition-test.toit.gold
tests/lsp/this-super-definition-test.toit:49:5: error: Can't access 'this' in static method
    this.member  // It's an error, but we might as well link to the class.
    ^~~~
tests/lsp/this-super-definition-test.toit:68:10: error: Couldn't find matching constructor in superclass 'SomeClass'
    super.named2
         ^~~~~~~
tests/lsp/this-super-definition-test.toit:108:5: error: Argument mismatch for 'bar'
Too few arguments provided
    super
    ^~~~~
